--- a/frontend/static/css/components/posts.css
+++ b/frontend/static/css/components/posts.css
@@ -811,7 +811,7 @@
 
         .post-event-date-month {
             font-weight: 500;
-            background-color: #FB1324;
+            background-color: #EC0417;
             color: #FFF;
             padding: 3px;
         }
